--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
     "author": "Faye",
     "description": "Utility library",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/docimin/faye-utils.git"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
     "devDependencies": {
         "@ianvs/prettier-plugin-sort-imports": "4.6.2",
         "@radix-ui/react-direction": "^1.1.1",
