--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@faye:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
+@docimin:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
