--- a/package.json
+++ b/package.json
@@ -69,10 +69,9 @@
         "build": "bun build --no-compress --format esm --format cjs --external react --entrypoint src/index.ts --outdir dist",
         "build:watch": "bun build --no-compress --format esm --format cjs --external react --watch --entrypoint src/index.ts --outdir dist --watch",
         "lint": "eslint . --ext .ts,.tsx",
-        "type-check": "tsc --noEmit",
-        "publish": "bun publish --access public"
+        "type-check": "tsc --noEmit"
     },
     "type": "module",
     "types": "./dist/index.d.ts",
-    "version": "0.1.3"
+    "version": "0.1.4"
 }
