--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
     "author": "Faye",
+    "dependencies": {
+        "class-variance-authority": "^0.7.1",
+        "date-fns": "^4.1.0",
+        "react-use": "^17.6.0",
+        "tailwind-merge": "^3.3.1"
+    },
     "description": "Utility library",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/docimin/faye-utils.git"
-    },
-    "publishConfig": {
-        "registry": "https://npm.pkg.github.com"
-    },
-    "packageManager": "bun@1.3.0",
     "devDependencies": {
         "@ianvs/prettier-plugin-sort-imports": "4.6.2",
         "@radix-ui/react-direction": "^1.1.1",
@@ -18,8 +16,6 @@
         "@typescript-eslint/eslint-plugin": "^8.46.1",
         "@typescript-eslint/parser": "^8.46.1",
         "autoprefixer": "^10.4.21",
-        "class-variance-authority": "^0.7.1",
-        "date-fns": "^4.1.0",
         "eslint": "^9.38.0",
         "eslint-config-prettier": "10.1.8",
         "eslint-plugin-prettier": "5.5.4",
@@ -31,21 +27,14 @@
         "prettier-plugin-tailwindcss": "0.6.14",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "react-use": "^17.6.0",
-        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.14",
         "typescript": "^5.9.3"
     },
     "exports": {
         ".": {
-            "import": {
-                "default": "./dist/index.js",
-                "types": "./dist/index.d.ts"
-            },
-            "require": {
-                "default": "./dist/index.cjs",
-                "types": "./dist/index.d.cts"
-            }
+            "default": "./dist/index.js",
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
         }
     },
     "files": [
@@ -58,20 +47,32 @@
         "ui"
     ],
     "license": "MIT",
-    "main": "./dist/index.cjs",
     "module": "./dist/index.js",
     "name": "@docimin/utils",
+    "packageManager": "bun@1.3.0",
     "peerDependencies": {
+        "@radix-ui/react-direction": "^1.1.0",
+        "@radix-ui/react-toast": "^1.2.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0"
     },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/docimin/faye-utils.git"
+    },
     "scripts": {
-        "build": "bun build --no-compress --format esm --format cjs --external react --entrypoint src/index.ts --outdir dist",
-        "build:watch": "bun build --no-compress --format esm --format cjs --external react --watch --entrypoint src/index.ts --outdir dist --watch",
+        "build": "bun run clean && tsc -p tsconfig.build.json",
+        "build:watch": "tsc -p tsconfig.build.json --watch",
+        "clean": "node -e \"require('fs').rmSync('dist', {recursive:true, force:true})\"",
         "lint": "eslint . --ext .ts,.tsx",
+        "prepublishOnly": "bun run build",
         "type-check": "tsc --noEmit"
     },
+    "sideEffects": false,
     "type": "module",
     "types": "./dist/index.d.ts",
-    "version": "0.1.6"
+    "version": "0.1.7"
 }
