--- a/package.json
+++ b/package.json
@@ -8,19 +8,13 @@
   },
   "description": "Utility library",
   "devDependencies": {
+    "@biomejs/biome": "^2.3.1",
     "@ianvs/prettier-plugin-sort-imports": "4.6.2",
     "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.15",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.38.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-prettier": "5.5.4",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
     "lucide-react": "^0.546.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -67,12 +61,13 @@
     "build": "bun run clean && tsc -p tsconfig.build.json",
     "build:watch": "tsc -p tsconfig.build.json --watch",
     "clean": "node -e \"require('fs').rmSync('dist', {recursive:true, force:true})\"",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "biome check .",
+    "lint:fix": "biome check . --write",
     "prepublishOnly": "bun run build",
     "type-check": "tsc --noEmit"
   },
   "sideEffects": false,
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.3.1"
+  "version": "0.3.2"
 }
