--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "react-use": "^17.6.0",
-    "tailwind-merge": "^3.3.1"
+    "zod": ">=4.1.12"
   },
   "description": "Utility library",
   "devDependencies": {
@@ -21,6 +21,7 @@
     "prettier-plugin-tailwindcss": "0.6.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
   },
@@ -48,7 +49,8 @@
     "@radix-ui/react-direction": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zod": "^3.0.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
