--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
-    "react-use": "^17.6.0",
-    "zod": ">=4.1"
+    "react-use": "^17.6.0"
   },
   "description": "Utility library",
   "devDependencies": {
@@ -44,13 +43,13 @@
   "license": "MIT",
   "module": "./dist/index.js",
   "name": "@docimin/utils",
-  "packageManager": "bun@1.3.0",
+  "packageManager": "bun@1.3.1",
   "peerDependencies": {
-    "@radix-ui/react-direction": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "zod": "^3.0.0"
+    "@radix-ui/react-direction": ">=1.1.0",
+    "@radix-ui/react-toast": ">=1.2.0",
+    "react": ">=19.2.0",
+    "react-dom": ">=19.2.0",
+    "zod": ">=4.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
@@ -71,5 +70,5 @@
   "sideEffects": false,
   "type": "module",
   "types": "./dist/index.d.ts",
-  "version": "0.3.2"
+  "version": "0.3.3"
 }
